--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -21,9 +21,17 @@
         "title": "Median of Two Sorted Arrays",
         "sidebar_label": "Median of Two Sorted Arrays"
       },
+      "reverse-integer": {
+        "title": "Reverse Integer",
+        "sidebar_label": "Reverse Integer"
+      },
       "two-sum": {
         "title": "Two Sum",
         "sidebar_label": "Two Sum"
+      },
+      "zigzag-conversion": {
+        "title": "ZigZag Conversion",
+        "sidebar_label": "ZigZag Conversion"
       }
     },
     "links": {
