--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -13,6 +13,14 @@
         "title": "Container With Most Water",
         "sidebar_label": "Container With Most Water"
       },
+      "integer-to-roman": {
+        "title": "Integer to Roman",
+        "sidebar_label": "Integer to Roman"
+      },
+      "longest-common-prefix": {
+        "title": "Longest Common Prefix",
+        "sidebar_label": "Longest Common Prefix"
+      },
       "longest-palindromic-substring": {
         "title": "Longest Palindromic Substring",
         "sidebar_label": "Longest Palindromic Substring"
@@ -36,6 +44,10 @@
       "reverse-integer": {
         "title": "Reverse Integer",
         "sidebar_label": "Reverse Integer"
+      },
+      "roman-to-integer": {
+        "title": "Roman to Integer",
+        "sidebar_label": "Roman to Integer"
       },
       "string-to-integer-atoi": {
         "title": "String to Integer (atoi)",
