--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,6 +5,10 @@
     "previous": "Previous",
     "tagline": "Generate your personal LeetCode website with one command!",
     "docs": {
+      "3sum-closest": {
+        "title": "3Sum Closest",
+        "sidebar_label": "3Sum Closest"
+      },
       "3sum": {
         "title": "3Sum",
         "sidebar_label": "3Sum"
@@ -20,6 +24,10 @@
       "integer-to-roman": {
         "title": "Integer to Roman",
         "sidebar_label": "Integer to Roman"
+      },
+      "letter-combinations-of-a-phone-number": {
+        "title": "Letter Combinations of a Phone Number",
+        "sidebar_label": "Letter Combinations of a Phone Number"
       },
       "longest-common-prefix": {
         "title": "Longest Common Prefix",
