--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -25,6 +25,10 @@
         "title": "Container With Most Water",
         "sidebar_label": "Container With Most Water"
       },
+      "generate-parentheses": {
+        "title": "Generate Parentheses",
+        "sidebar_label": "Generate Parentheses"
+      },
       "integer-to-roman": {
         "title": "Integer to Roman",
         "sidebar_label": "Integer to Roman"
