--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -21,21 +21,105 @@
         "title": "Add Two Numbers",
         "sidebar_label": "Add Two Numbers"
       },
+      "big-countries": {
+        "title": "Big Countries",
+        "sidebar_label": "Big Countries"
+      },
+      "binary-tree-inorder-traversal": {
+        "title": "Binary Tree Inorder Traversal",
+        "sidebar_label": "Binary Tree Inorder Traversal"
+      },
+      "classes-more-than-5-students": {
+        "title": "Classes More Than 5 Students",
+        "sidebar_label": "Classes More Than 5 Students"
+      },
+      "coin-change-2": {
+        "title": "Coin Change 2",
+        "sidebar_label": "Coin Change 2"
+      },
+      "combination-sum-ii": {
+        "title": "Combination Sum II",
+        "sidebar_label": "Combination Sum II"
+      },
+      "combination-sum": {
+        "title": "Combination Sum",
+        "sidebar_label": "Combination Sum"
+      },
+      "combine-two-tables": {
+        "title": "Combine Two Tables",
+        "sidebar_label": "Combine Two Tables"
+      },
+      "consecutive-numbers": {
+        "title": "Consecutive Numbers",
+        "sidebar_label": "Consecutive Numbers"
+      },
       "container-with-most-water": {
         "title": "Container With Most Water",
         "sidebar_label": "Container With Most Water"
+      },
+      "count-and-say": {
+        "title": "Count and Say",
+        "sidebar_label": "Count and Say"
+      },
+      "count-servers-that-communicate": {
+        "title": "Count Servers that Communicate",
+        "sidebar_label": "Count Servers that Communicate"
+      },
+      "customers-who-never-order": {
+        "title": "Customers Who Never Order",
+        "sidebar_label": "Customers Who Never Order"
+      },
+      "delete-duplicate-emails": {
+        "title": "Delete Duplicate Emails",
+        "sidebar_label": "Delete Duplicate Emails"
+      },
+      "department-highest-salary": {
+        "title": "Department Highest Salary",
+        "sidebar_label": "Department Highest Salary"
+      },
+      "department-top-three-salaries": {
+        "title": "Department Top Three Salaries",
+        "sidebar_label": "Department Top Three Salaries"
+      },
+      "design-hashset": {
+        "title": "Design HashSet",
+        "sidebar_label": "Design HashSet"
       },
       "divide-two-integers": {
         "title": "Divide Two Integers",
         "sidebar_label": "Divide Two Integers"
       },
+      "duplicate-emails": {
+        "title": "Duplicate Emails",
+        "sidebar_label": "Duplicate Emails"
+      },
+      "employees-earning-more-than-their-managers": {
+        "title": "Employees Earning More Than Their Managers",
+        "sidebar_label": "Employees Earning More Than Their Managers"
+      },
       "find-first-and-last-position-of-element-in-sorted-array": {
         "title": "Find First and Last Position of Element in Sorted Array",
         "sidebar_label": "Find First and Last Position of Element in Sorted Array"
       },
+      "find-n-unique-integers-sum-up-to-zero": {
+        "title": "Find N Unique Integers Sum up to Zero",
+        "sidebar_label": "Find N Unique Integers Sum up to Zero"
+      },
+      "find-the-smallest-divisor-given-a-threshold": {
+        "title": "Find the Smallest Divisor Given a Threshold",
+        "sidebar_label": "Find the Smallest Divisor Given a Threshold"
+      },
+      "first-missing-positive": {
+        "title": "First Missing Positive",
+        "sidebar_label": "First Missing Positive"
+      },
       "generate-parentheses": {
         "title": "Generate Parentheses",
         "sidebar_label": "Generate Parentheses"
+      },
+      "group-anagrams": {
+        "title": "Group Anagrams",
+        "sidebar_label": "Group Anagrams"
       },
       "implement-strstr": {
         "title": "Implement strStr()",
@@ -44,6 +128,10 @@
       "integer-to-roman": {
         "title": "Integer to Roman",
         "sidebar_label": "Integer to Roman"
+      },
+      "jump-game-ii": {
+        "title": "Jump Game II",
+        "sidebar_label": "Jump Game II"
       },
       "letter-combinations-of-a-phone-number": {
         "title": "Letter Combinations of a Phone Number",
@@ -65,6 +153,10 @@
         "title": "Longest Valid Parentheses",
         "sidebar_label": "Longest Valid Parentheses"
       },
+      "maximum-length-of-pair-chain": {
+        "title": "Maximum Length of Pair Chain",
+        "sidebar_label": "Maximum Length of Pair Chain"
+      },
       "median-of-two-sorted-arrays": {
         "title": "Median of Two Sorted Arrays",
         "sidebar_label": "Median of Two Sorted Arrays"
@@ -77,17 +169,77 @@
         "title": "Merge Two Sorted Lists",
         "sidebar_label": "Merge Two Sorted Lists"
       },
+      "minimum-ascii-delete-sum-for-two-strings": {
+        "title": "Minimum ASCII Delete Sum for Two Strings",
+        "sidebar_label": "Minimum ASCII Delete Sum for Two Strings"
+      },
+      "minimum-flips-to-make-a-or-b-equal-to-c": {
+        "title": "Minimum Flips to Make a OR b Equal to c",
+        "sidebar_label": "Minimum Flips to Make a OR b Equal to c"
+      },
+      "minimum-number-of-k-consecutive-bit-flips": {
+        "title": "Minimum Number of K Consecutive Bit Flips",
+        "sidebar_label": "Minimum Number of K Consecutive Bit Flips"
+      },
+      "multiply-strings": {
+        "title": "Multiply Strings",
+        "sidebar_label": "Multiply Strings"
+      },
       "next-permutation": {
         "title": "Next Permutation",
         "sidebar_label": "Next Permutation"
+      },
+      "nth-highest-salary": {
+        "title": "Nth Highest Salary",
+        "sidebar_label": "Nth Highest Salary"
+      },
+      "number-of-islands": {
+        "title": "Number of Islands",
+        "sidebar_label": "Number of Islands"
+      },
+      "number-of-recent-calls": {
+        "title": "Number of Recent Calls",
+        "sidebar_label": "Number of Recent Calls"
       },
       "palindrome-number": {
         "title": "Palindrome Number",
         "sidebar_label": "Palindrome Number"
       },
+      "permutations-ii": {
+        "title": "Permutations II",
+        "sidebar_label": "Permutations II"
+      },
+      "permutations": {
+        "title": "Permutations",
+        "sidebar_label": "Permutations"
+      },
+      "powx-n": {
+        "title": "Pow(x, n)",
+        "sidebar_label": "Pow(x, n)"
+      },
+      "print-in-order": {
+        "title": "Print in Order",
+        "sidebar_label": "Print in Order"
+      },
+      "random-pick-index": {
+        "title": "Random Pick Index",
+        "sidebar_label": "Random Pick Index"
+      },
+      "rank-scores": {
+        "title": "Rank Scores",
+        "sidebar_label": "Rank Scores"
+      },
       "regular-expression-matching": {
         "title": "Regular Expression Matching",
         "sidebar_label": "Regular Expression Matching"
+      },
+      "remove-all-adjacent-duplicates-in-string": {
+        "title": "Remove All Adjacent Duplicates In String",
+        "sidebar_label": "Remove All Adjacent Duplicates In String"
+      },
+      "remove-comments": {
+        "title": "Remove Comments",
+        "sidebar_label": "Remove Comments"
       },
       "remove-duplicates-from-sorted-array": {
         "title": "Remove Duplicates from Sorted Array",
@@ -101,6 +253,10 @@
         "title": "Remove Nth Node From End of List",
         "sidebar_label": "Remove Nth Node From End of List"
       },
+      "repeated-string-match": {
+        "title": "Repeated String Match",
+        "sidebar_label": "Repeated String Match"
+      },
       "reverse-integer": {
         "title": "Reverse Integer",
         "sidebar_label": "Reverse Integer"
@@ -109,9 +265,25 @@
         "title": "Reverse Nodes in k-Group",
         "sidebar_label": "Reverse Nodes in k-Group"
       },
+      "rising-temperature": {
+        "title": "Rising Temperature",
+        "sidebar_label": "Rising Temperature"
+      },
+      "rle-iterator": {
+        "title": "RLE Iterator",
+        "sidebar_label": "RLE Iterator"
+      },
       "roman-to-integer": {
         "title": "Roman to Integer",
         "sidebar_label": "Roman to Integer"
+      },
+      "rotate-image": {
+        "title": "Rotate Image",
+        "sidebar_label": "Rotate Image"
+      },
+      "rotting-oranges": {
+        "title": "Rotting Oranges",
+        "sidebar_label": "Rotting Oranges"
       },
       "search-in-rotated-sorted-array": {
         "title": "Search in Rotated Sorted Array",
@@ -121,6 +293,14 @@
         "title": "Search Insert Position",
         "sidebar_label": "Search Insert Position"
       },
+      "second-highest-salary": {
+        "title": "Second Highest Salary",
+        "sidebar_label": "Second Highest Salary"
+      },
+      "split-linked-list-in-parts": {
+        "title": "Split Linked List in Parts",
+        "sidebar_label": "Split Linked List in Parts"
+      },
       "string-to-integer-atoi": {
         "title": "String to Integer (atoi)",
         "sidebar_label": "String to Integer (atoi)"
@@ -129,21 +309,57 @@
         "title": "Substring with Concatenation of All Words",
         "sidebar_label": "Substring with Concatenation of All Words"
       },
+      "subtract-the-product-and-sum-of-digits-of-an-integer": {
+        "title": "Subtract the Product and Sum of Digits of an Integer",
+        "sidebar_label": "Subtract the Product and Sum of Digits of an Integer"
+      },
+      "sudoku-solver": {
+        "title": "Sudoku Solver",
+        "sidebar_label": "Sudoku Solver"
+      },
       "swap-nodes-in-pairs": {
         "title": "Swap Nodes in Pairs",
         "sidebar_label": "Swap Nodes in Pairs"
+      },
+      "tenth-line": {
+        "title": "Tenth Line",
+        "sidebar_label": "Tenth Line"
+      },
+      "trapping-rain-water": {
+        "title": "Trapping Rain Water",
+        "sidebar_label": "Trapping Rain Water"
+      },
+      "triangle": {
+        "title": "Triangle",
+        "sidebar_label": "Triangle"
+      },
+      "trips-and-users": {
+        "title": "Trips and Users",
+        "sidebar_label": "Trips and Users"
       },
       "two-sum": {
         "title": "Two Sum",
         "sidebar_label": "Two Sum"
       },
+      "unique-number-of-occurrences": {
+        "title": "Unique Number of Occurrences",
+        "sidebar_label": "Unique Number of Occurrences"
+      },
       "valid-parentheses": {
         "title": "Valid Parentheses",
         "sidebar_label": "Valid Parentheses"
       },
+      "valid-phone-numbers": {
+        "title": "Valid Phone Numbers",
+        "sidebar_label": "Valid Phone Numbers"
+      },
       "valid-sudoku": {
         "title": "Valid Sudoku",
         "sidebar_label": "Valid Sudoku"
+      },
+      "wildcard-matching": {
+        "title": "Wildcard Matching",
+        "sidebar_label": "Wildcard Matching"
       },
       "zigzag-conversion": {
         "title": "ZigZag Conversion",
